--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,71 +1,59 @@
-name: Build and Push Airflow DAG Image
+name: Build and Deploy Airflow DAG Image
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
     paths:
-      - "dags/**"
-      - "requirements.txt"
-      - "Dockerfile"
+      - 'dags/**'
+      - 'requirements.txt'
+      - 'Dockerfile'
 
 jobs:
-  build-and-push:
-    name: Build and Push Docker Image
+  build-and-update:
+    name: Build Docker image and update Helm values.yaml
     runs-on: ubuntu-latest
 
     env:
+      REGISTRY: ghcr.io
       IMAGE_NAME: ghcr.io/sserkanguzel/project-1-1-batch-processing-airflow
-      GITOPS_REPO: Project-1-Batch-Processing-Infrastructure
-      GITOPS_PATH: airflow-manifests/values.yaml
-
-    permissions:
-      contents: write
-      packages: write
 
     steps:
       - name: Checkout DAG repo
         uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      - name: Set date tag
+        id: vars
+        run: echo "tag=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
 
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
-          registry: ghcr.io
+          registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Get date tag
-        id: tag
-        run: echo "date_tag=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
-
       - name: Build and push image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: |
-            ${{ env.IMAGE_NAME }}:${{ steps.tag.outputs.date_tag }}
-
-      - name: Checkout GitOps repo
-        uses: actions/checkout@v4
-        with:
-          repository: sserkanguzel/airflow-deployment
-          token: ${{ secrets.GITHUB_TOKEN }}
-          path: gitops
-
-      - name: Update values.yaml with new image tag
         run: |
-          sed -i "s|\(workerContainerImage:.*:\).*|\1${{ steps.tag.outputs.date_tag }}|" gitops/${{ env.GITOPS_PATH }}
+          docker build -t $IMAGE_NAME:${{ steps.vars.outputs.tag }} .
+          docker push $IMAGE_NAME:${{ steps.vars.outputs.tag }}
 
-      - name: Commit and push updated values.yaml
+      - name: Clone Airflow deployment repo (GitOps)
         run: |
-          cd gitops
-          git config user.name "GitHub Actions"
-          git config user.email "actions@github.com"
-          git add ${{ env.GITOPS_PATH }}
-          git commit -m "Update image tag to ${{ steps.tag.outputs.date_tag }}"
-          git push
+          git clone https://github.com/sserkanguzel/Project-1-Batch-Processing-Infrastructure.git infra
+
+      - name: Configure git
+        run: |
+          cd infra
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
+
+      - name: Update image tag in values.yaml
+        run: |
+          sed -i "s|tag: .*|tag: '${{ steps.vars.outputs.tag }}'|" infra/airflow-manifests/values.yaml
+
+      - name: Commit and push changes to deployment repo
+        run: |
+          cd infra
+          git add airflow-manifests/values.yaml
+          git commit -m "Update Airflow image tag to ${{ steps.vars.outputs.tag }}"
+          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/sserkanguzel/Project-1-Batch-Processing-Infrastructure.git HEAD:main
