--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,9 +21,9 @@ jobs:
       - name: Checkout DAG repo
         uses: actions/checkout@v4
 
-      - name: Set date tag
+      - name: Set datetime tag
         id: vars
-        run: echo "tag=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
+        run: echo "tag=$(date +'%Y-%m-%d-%H%M')" >> $GITHUB_OUTPUT
 
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
