--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   build-and-update:
-    name: Build Docker image and update Helm values.yaml
+    name: Build Docker image and update Helm values and pod_template.yaml
     runs-on: ubuntu-latest
 
     env:
@@ -30,9 +30,9 @@ jobs:
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
-          password: ${{ secrets.GHCR_PAT }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push image
+      - name: Build and push Docker image
         run: |
           docker build -t $IMAGE_NAME:${{ steps.vars.outputs.tag }} .
           docker push $IMAGE_NAME:${{ steps.vars.outputs.tag }}
@@ -41,19 +41,23 @@ jobs:
         run: |
           git clone https://github.com/sserkanguzel/Project-1-Batch-Processing-Infrastructure.git infra
 
-      - name: Configure git
+      - name: Configure Git
         run: |
           cd infra
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
 
-      - name: Update image tag in values.yaml
+      - name: Update image tag in values.yaml and pod_template.yaml
         run: |
+          # Update image tag in Helm values.yaml
           sed -i "s|tag: .*|tag: '${{ steps.vars.outputs.tag }}'|" infra/airflow-manifests/values.yaml
+
+          # Update container image in pod_template.yaml
+          sed -i "s|image: .*|image: \"${{ env.IMAGE_NAME }}:${{ steps.vars.outputs.tag }}\"|" infra/airflow-manifests/config/pod_template.yaml
 
       - name: Commit and push changes to deployment repo
         run: |
           cd infra
-          git add airflow-manifests/values.yaml
+          git add airflow-manifests/values.yaml airflow-manifests/config/pod_template.yaml
           git commit -m "Update Airflow image tag to ${{ steps.vars.outputs.tag }}"
-          git push https://x-access-token:${{ secrets.GHCR_PAT }}@github.com/sserkanguzel/Project-1-Batch-Processing-Infrastructure.git HEAD:main
+          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/sserkanguzel/Project-1-Batch-Processing-Infrastructure.git HEAD:main
