--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,5 +1,9 @@
 name: Build and Deploy Airflow DAG Image
 
+permissions:
+  contents: write
+  packages: write
+  
 on:
   push:
     branches: [main]
